fix(jwks-source): address PR #3 review findings
- JWKSource.singleflightRefresh: failed CAS now falls back to a
  completed future over the latest snapshot when the winner has
  already cleared the slot, preventing NPE at every awaiter.
- JWKSource.close: interrupt the in-flight refresh thread (tracked
  via a volatile field) to expedite cancellation.
- JWKSource scheduler: switch from Thread.ofVirtual().factory() to a
  daemon platform-thread factory; refresh work itself is already
  dispatched to a fresh virtual thread.
- JWKSource: bracket runtime values in the success log and drop the
  duplicate empty-kid-map error log; the singleflight failure path
  already logs the cause.
- JWKSource.parseMaxAge: document no-store precedence over max-age.
- Verifiers.fromJWK: widen catch to RuntimeException so a mismatched
  alg/kty (which throws InvalidKeyTypeException via KeyCoercion)
  does not escape the documented "never throws" contract.
- Verifiers.algKtyCrvConsistent: enumerate valid RSA algs instead of
  unconditionally returning true for any RSA kty.
- JSONWebKeySetHelper: default JWKSResponse status to -1 (not 200)
  when getResponseCode is unavailable; replace inline FQN imports
  with proper imports.
- Strip internal spec/design-doc references from production javadoc
  and inline comments across JWKSource, Verifiers,
  JSONWebKeySetHelper, and CacheControlPolicy.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>